<resources>
    <string name="appID">golfuserdataapplication-cqklc</string>
    <string name="home_screen_title">Wyatt\'s Personal Golf Stat Tracker</string>
    <string name="app_name">GolfTracker</string>
    <string name="putt">putt</string>
    <string name="stroke">stroke</string>
    <string name="penalty">penalty</string>
    <string name="next">Next Hole</string>
    <string name="previous">Prev Hole</string>
    <string name="undo">Undo</string>
    <string name="penalty_up">Penalty+</string>
    <string name="putt_up">Putt+</string>
    <string name="stroke_up">Stroke+</string>
    <string name="fairway">Fairway</string>
    <string name="sand">Sand</string>
    <string name="title_activity_maps">Map</string>
    <string name="hole_one">1\n5</string>
    <string name="hole_two">2\n3</string>
    <string name="hole_three">3\n4</string>
    <string name="hole_four">4\n4</string>
    <string name="hole_five">5\n4</string>
    <string name="hole_six">6\n3</string>
    <string name="hole_seven">7\n5</string>
    <string name="hole_eight">8\n4</string>
    <string name="hole_nine">9\n4</string>
    <string name="hole_ten">10\n5</string>
    <string name="hole_eleven">11\n4</string>
    <string name="hole_twelve">12\n4</string>
    <string name="hole_thirteen">13\n5</string>
    <string name="hole_fourteen">14\n3</string>
    <string name="hole_fifteen">15\n4</string>
    <string name="hole_sixteen">16\n4</string>
    <string name="hole_seventeen">17\n3</string>
    <string name="hole_eighteen">18\n4</string>
    <string name="hole_out">Out\n36</string>
    <string name="hole_in">In\n36</string>
    <string name="zero">0</string>
    <string name="exit">Exit</string>
    <string name="miss_fairway">You missed the fairway.\n</string>
    <string name="hit_fairway">You hit the fairway.\n</string>
    <string name="hit_green">You were on the green in regulation.</string>
    <string name="miss_green">You missed the green in regulation.</string>
    <string name="select_hole">Select a hole for more data.</string>
    <string name="ask_save">Are you sure you want to end the round?</string>
    <string name="ask_save_incomplete">The current round is incomplete, are you sure you want to end the round?</string>
    <string name="ask_save_none_played">You haven\'t entered any scores yet. You cannot save this round.</string>
    <string name="stats_no_complete_rounds">You don\'t have any complete rounds saved on this device.  Start a round and save it for detailed stat tracking!</string>
    <string name="stats_no_rounds">You don\'t have any rounds saved on this device.  Start a round and save it for detailed stat tracking!</string>
    <string name="view_all_holes">View Hole by Hole</string>
    <string name="view_all_rounds">View All Rounds</string>
    <string name="AppID">devicesync-xfcyj</string>
    <string name="wait_for_stats">  Please wait for statistics to be     loaded.</string>
    <string-array name="sort_holes">
        <item>Select Sorting Order</item>
        <item>Playing Order</item>
        <item>Best to Worst: Score</item>
        <item>Worst to Best: Score</item>
    </string-array>
    <string-array name="sort_rounds">
        <item>Select Sorting Order</item>
        <item>Played Order</item>
        <item>Best to Worst: Score</item>
        <item>Worst to Best: Score</item>
    </string-array>
    <string-array name="sort_rounds_selected">
        <item>Played Order</item>
        <item>Best to Worst: Score</item>
        <item>Worst to Best: Score</item>
    </string-array>
</resources>
