<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:background="@drawable/landscape"
    tools:context=".database.activity.ShowSingleRound">



    <TableLayout
        android:id="@+id/tl1"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/r1"
            android:layout_width="368dp"
            android:layout_height="48dp"
            android:gravity="top">

            <TextView
                android:id="@+id/tv1"
                style="@style/HoleText"
                android:text="@string/hole_one" />

            <TextView
                android:id="@+id/tv2"
                style="@style/HoleText"
                android:text="@string/hole_two" />

            <TextView
                android:id="@+id/tv3"
                style="@style/HoleText"
                android:text="@string/hole_three" />

            <TextView
                android:id="@+id/tv4"
                style="@style/HoleText"
                android:text="@string/hole_four" />

            <TextView
                android:id="@+id/tv5"
                style="@style/HoleText"
                android:text="@string/hole_five" />

            <TextView
                android:id="@+id/tv6"
                style="@style/HoleText"
                android:text="@string/hole_six" />

            <TextView
                android:id="@+id/tv7"
                style="@style/HoleText"
                android:text="@string/hole_seven" />

            <TextView
                android:id="@+id/tv8"
                style="@style/HoleText"
                android:text="@string/hole_eight" />

            <TextView
                android:id="@+id/tv9"
                style="@style/HoleText"
                android:text="@string/hole_nine" />

            <TextView
                android:id="@+id/tv10"
                android:layout_width="45dp"
                android:background="@drawable/back"
                android:padding="3dip"
                android:text="@string/hole_out"
                android:textAlignment="center"
                android:textSize="12dp" />

        </TableRow>


        <TableRow
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="top">

            <TextView
                android:id="@+id/tv11"
                style="@style/scorestyle"/>

            <TextView
                android:id="@+id/tv12"
                style="@style/scorestyle"/>

            <TextView
                android:id="@+id/tv13"
                style="@style/scorestyle"/>

            <TextView
                android:id="@+id/tv14"
                style="@style/scorestyle"/>

            <TextView
                android:id="@+id/tv15"
                style="@style/scorestyle"/>

            <TextView
                android:id="@+id/tv16"
                style="@style/scorestyle"/>

            <TextView
                android:id="@+id/tv17"
                style="@style/scorestyle"/>

            <TextView
                android:id="@+id/tv18"
                style="@style/scorestyle"/>

            <TextView
                android:id="@+id/tv19"
                style="@style/scorestyle"/>

            <TextView
                android:id="@+id/tv20"
                style="@style/scorestyle"/>

        </TableRow>

        <TableRow
            android:id="@+id/r3"
            android:layout_width="368dp"
            android:layout_height="48dp"
            android:gravity="top">

            <TextView
                android:id="@+id/tv21"
                style="@style/HoleText"
                android:text="@string/hole_ten" />

            <TextView
                android:id="@+id/tv22"
                style="@style/HoleText"
                android:text="@string/hole_eleven" />

            <TextView
                android:id="@+id/tv23"
                style="@style/HoleText"
                android:text="@string/hole_twelve" />

            <TextView
                android:id="@+id/tv24"
                style="@style/HoleText"
                android:text="@string/hole_thirteen" />

            <TextView
                android:id="@+id/tv25"
                style="@style/HoleText"
                android:text="@string/hole_fourteen" />

            <TextView
                android:id="@+id/tv26"
                style="@style/HoleText"
                android:text="@string/hole_fifteen" />

            <TextView
                android:id="@+id/tv27"
                style="@style/HoleText"
                android:text="@string/hole_sixteen" />

            <TextView
                android:id="@+id/tv28"
                style="@style/HoleText"
                android:text="@string/hole_seventeen" />

            <TextView
                android:id="@+id/tv29"
                style="@style/HoleText"
                android:text="@string/hole_eighteen" />

            <TextView
                android:id="@+id/tv30"
                android:layout_width="45dp"
                android:background="@drawable/back"
                android:padding="3dip"
                android:text="@string/hole_in"
                android:textAlignment="center"
                android:textSize="12dp" />

        </TableRow>


        <TableRow
            android:id="@+id/r4"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="top">

            <TextView
                android:id="@+id/tv31"
                style="@style/scorestyle"/>

            <TextView
                android:id="@+id/tv32"
                style="@style/scorestyle"/>

            <TextView
                android:id="@+id/tv33"
                style="@style/scorestyle"/>


            <TextView
                android:id="@+id/tv34"
                style="@style/scorestyle"/>

            <TextView
                android:id="@+id/tv35"
                style="@style/scorestyle"/>

            <TextView
                android:id="@+id/tv36"
                style="@style/scorestyle"/>

            <TextView
                android:id="@+id/tv37"
                style="@style/scorestyle"/>

            <TextView
                android:id="@+id/tv38"
                style="@style/scorestyle"/>

            <TextView
                android:id="@+id/tv39"
                style="@style/scorestyle"/>

            <TextView
                android:id="@+id/tv40"
                style="@style/scorestyle"/>


        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/holeStats"
        style="@style/stats_text_style"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/select_hole"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/overallStats" />

    <TextView
        android:id="@+id/overallStats"
        style="@style/stats_text_style"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tl1" />

</androidx.constraintlayout.widget.ConstraintLayout>